--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,3 @@
 REACT_APP_GOOGLE_MAPS_API_KEY=AIzaSyB6kpPvHxT519zLJfbXPmSrufZnvmFKkXg
 REACT_APP_GOOGLE_MAPS_MAP_ID=bb1695f9c543579a928454d0
+REACT_APP_API_URL=https://clinicaslinkexternor01-production.up.railway.app/api
