--- a/frontend/package.json
+++ b/frontend/package.json
@@ -44,8 +44,8 @@
     "start": "craco start",
     "build": "craco build",
     "test": "craco test",
-    "eject": "react-scripts eject",
-    "postinstall": "npm install --legacy-peer-deps"
+    "eject": "react-scripts eject"
+    
   },
   "eslintConfig": {
     "extends": [
