--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
     "date-fns-tz": "^3.2.0",
     "dotenv": "^17.1.0",
     "express": "^4.21.2",
+    "express-basic-auth": "^1.2.1",
     "knex": "^3.1.0",
     "multer": "^2.0.1",
     "snakecase-keys": "^9.0.2",
