--- a/backend/package.json
+++ b/backend/package.json
@@ -26,6 +26,7 @@
     "express": "^4.21.2",
     "express-basic-auth": "^1.2.1",
     "knex": "^3.1.0",
+    "mime-types": "^3.0.1",
     "multer": "^2.0.1",
     "sqlite3": "^5.1.7",
     "swagger-jsdoc": "^6.2.8",
@@ -37,6 +38,7 @@
     "@types/cors": "^2.8.18",
     "@types/express": "^4.17.22",
     "@types/jest": "^30.0.0",
+    "@types/mime-types": "^3.0.1",
     "@types/multer": "^1.4.13",
     "@types/node": "^22.15.29",
     "@types/supertest": "^6.0.3",
